--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
         <h2>Lista de pessoas que eu já pegeui</h2>
         <ul id="lista-de-compras-mercado">
           <span id="mercado_texto_lista_vazia">Lista vazia</span>
+          <div>
+            <input type = 'checkbox'></input>
+            <p>Manu</p>
+          </div>
         </ul>
       </div>
     </main>
