--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h2>Lista de pessoas que eu já pegeui</h2>
         <ul id="lista-de-compras-mercado">
           <span id="mercado_texto_lista_vazia">Lista vazia</span>
-          <div>
+          <div className = 'lista-item-container'>
             <input type = 'checkbox'></input>
             <p>Manu</p>
           </div>
