--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </form>
 
       <div class="container-lista">
-        <h2>Lista de pessoas que eu já pegeui</h2>
+        <h2>Lista de pessoas que eu já peguei</h2>
         <ul id="lista-de-compras-mercado">
           <span id="mercado_texto_lista_vazia">Lista vazia</span>
           <li>
